# Text-adventure---Sticky-forest

./: credits.py  game.py  main.py  pyproject.toml
