[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["repl.it user <replituser@example.com>"]
description = ""
name = "text-adventure-sticky-forest"
version = "0.1.0"
[tool.poetry.dependencies]
cursor = "^1.3"
python = "^3.8"
pygame = "^1.9.6"
console = "^0.990"
[tool.poetry.dev-dependencies]
